--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -132,6 +132,9 @@ a {
         transition: all ease 1s;
       }
     }
+    span {
+      transition: all ease 1s;
+    }
     &::after {
       position: absolute;
       transition: all ease 0.6s;
