--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -106,6 +106,27 @@
     }
   }
   // Portfolio end
+  .OurValues .d-flex .item {
+    width: 275px;
+  }
+  .OurValues .d-flex .item p {
+    font-size: 16.093px;
+    line-height: 24.375px;
+  }
+  .ConsultingSuccess .item h2,
+  .ConsultingSuccess .item .h2 {
+    font-size: 60.729px;
+    line-height: 70px;
+    margin-bottom: 0;
+  }
+  .ConsultingSuccess .item p {
+    font-size: 16.093px;
+    line-height: 24px;
+  }
+  .ConsultingSuccess .item {
+    padding: 40px 20px;
+    height: 100%;
+  }
 }
 
 /*// Medium devices (tablets, 768px and up)*/
@@ -148,10 +169,22 @@
     padding-right: 0px;
     padding-left: 0px;
   }
+  .OurValues .d-flex {
+    gap: 30px;
+  }
+  .OurValues .d-flex .item {
+    width: 45%;
+  }
 }
 
 /*// Small devices (landscape phones, 576px and up)*/
 @media (max-width: 767.98px) {
+  .OurValues .d-flex {
+    gap: 30px;
+  }
+  .OurValues .d-flex .item {
+    width: 100%;
+  }
   .banner .itemLeft h1,
   .banner .itemLeft .h1 {
     font-size: 32px;
@@ -212,7 +245,9 @@
     line-height: 24px;
   }
   .commonItem h2,
-  .commonItem .h2 {
+  .commonItem .h2,
+  .CompanyOverview .box h2,
+  .CompanyOverview .box .h2 {
     font-size: 32px;
     line-height: 40px;
   }
@@ -274,6 +309,37 @@
   }
   header .navbar-brand img {
     width: 210px;
+  }
+  .CompanyOverview .box p {
+    font-size: 14px;
+    line-height: 24px;
+  }
+  .aboutTitle {
+    padding-top: 45px;
+    padding-bottom: 60px;
+  }
+  .aboutTitle h1,
+  .aboutTitle .h1 {
+    font-size: 32px;
+  }
+  .CompanyOverview .box {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .OurValues .d-flex .item h4,
+  .OurValues .d-flex .item .h4 {
+    font-size: 24px;
+  }
+  .ConsultingSuccess .item h2,
+  .ConsultingSuccess .item .h2 {
+    font-size: 40.729px;
+    line-height: 50px;
+    margin-bottom: 0;
+  }
+  .ConsultingSuccess .item {
+    padding: 30px 15px;
   }
 }
 
