--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -1016,3 +1016,165 @@ footer {
     }
   }
 }
+// aboutTitle start
+.aboutTitle {
+  background-color: #171925;
+  position: relative;
+  overflow: hidden;
+  padding-top: 90px;
+  padding-bottom: 145px;
+  z-index: 9;
+  &::after {
+    background-image: url(../img/bg.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    opacity: 0.3;
+    position: absolute;
+    content: '';
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
+  h1 {
+    color: #0ff;
+    font-family: Proxima Nova;
+    font-size: 55.543px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    text-transform: uppercase;
+    margin-bottom: 0;
+  }
+}
+// CompanyOverview start
+.CompanyOverview {
+  padding: 90px 0;
+
+  .box {
+    background-image: url(../img/company.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    position: relative;
+    border-radius: 6.943px;
+    z-index: 1;
+    &::after {
+      position: absolute;
+      content: '';
+      border-radius: 6.943px;
+      opacity: 0.8;
+      background: #202430;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+    }
+    padding: {
+      top: 120px;
+      bottom: 95px;
+      left: 40px;
+      right: 40px;
+    }
+    h2 {
+      color: #0ff;
+      font-family: Proxima Nova;
+      font-size: 43.393px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 56.411px; /* 130% */
+      margin-bottom: 10px;
+    }
+    p {
+      color: #fff;
+      text-align: center;
+      font-family: Proxima Nova;
+      font-size: 19.093px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 30.375px; /* 159.091% */
+      margin-bottom: 0;
+      width: 995px;
+      max-width: 100%;
+      margin: 0 auto;
+    }
+  }
+}
+// CompanyOverview end
+// OurValues start
+.OurValues {
+  background: #202430;
+  padding-top: 90px;
+  padding-bottom: 80px;
+  .commonItem {
+    margin-bottom: 50px !important;
+  }
+  .d-flex {
+    .item {
+      width: 355px;
+      max-width: 100%;
+      h4 {
+        color: #fff;
+        font-family: Proxima Nova;
+        font-size: 27.772px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+        margin-bottom: 16px;
+      }
+      p {
+        color: #fff;
+        font-family: Proxima Nova;
+        font-size: 19.093px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 30.375px; /* 159.091% */
+      }
+    }
+  }
+}
+// OurValues end
+// ConsultingSuccess start
+.ConsultingSuccess {
+  padding: 90px 0;
+  .commonItem {
+    margin-bottom: 50px !important;
+  }
+  .item {
+    border-radius: 6.474px;
+    background: #fff;
+    padding: 40px 35px;
+    h2 {
+      color: #000;
+      font-family: Proxima Nova;
+      font-size: 93.729px;
+      font-style: normal;
+      font-weight: 800;
+      line-height: 93.729px; /* 100% */
+      margin-bottom: 0;
+    }
+    p {
+      color: #343434;
+      font-family: Proxima Nova;
+      font-size: 19.093px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 30.375px; /* 159.091% */
+      margin-bottom: 0;
+    }
+  }
+}
+// ConsultingSuccess end
+// OurJourney start
+.OurJourney {
+  padding: 90px 0;
+  .commonItem {
+    width: 995px;
+  }
+  img {
+    border-radius: 6.943px;
+  }
+}
+// OurJourney end
