blog new page design

--- a/scss/_blog.scss
+++ b/scss/_blog.scss
@@ -190,6 +190,7 @@
       .accordion-body {
         ul {
           li {
+            margin-bottom: 10px;
             a {
               color: #21232f;
               font-family: Proxima Nova;
