--- a/scss/_faqs.scss
+++ b/scss/_faqs.scss
@@ -60,4 +60,40 @@
       }
     }
   }
+
+  &.FrequentlyAsked2 {
+    padding: 86px 0;
+    h3 {
+      font-size: 43.393px;
+      line-height: 52.072px;
+      margin-bottom: 28px;
+    }
+    .accordion {
+      .accordion-item {
+        padding: 35px;
+        margin-bottom: 17px;
+        .accordion-header {
+          .accordion-button {
+            font-size: 20.829px;
+            line-height: 34.715px; /* 166.667% */
+          }
+        }
+      }
+      .accordion-collapse {
+        .accordion-body {
+          padding-top: 18px;
+          p {
+            strong {
+              font-weight: 400;
+            }
+            font-size: 19.093px;
+            line-height: 26.904px; /* 140.909% */
+            &:last-child {
+              margin-bottom: 0;
+            }
+          }
+        }
+      }
+    }
+  }
 }
