--- a/scss/_blog.scss
+++ b/scss/_blog.scss
@@ -124,6 +124,7 @@
         padding: 15px 0;
         border-bottom: 1px solid #dedede;
         gap: 15px;
+        text-decoration: none;
         img {
           border-radius: 3.471px;
           width: 55.543px;
@@ -188,9 +189,14 @@
     }
     .accordion-collapse {
       .accordion-body {
+        padding-top: 0;
         ul {
           li {
             margin-bottom: 10px;
+            padding-left: 0;
+            &::after {
+              display: none;
+            }
             a {
               color: #21232f;
               font-family: Proxima Nova;
@@ -199,6 +205,7 @@
               font-weight: 600;
               line-height: 17.357px; /* 111.111% */
               background-color: transparent;
+              text-decoration: none;
             }
           }
         }
@@ -207,5 +214,13 @@
   }
   .SocialMedia {
     padding-top: 17px;
+    ul {
+      li {
+        padding-left: 0;
+        &::after {
+          display: none;
+        }
+      }
+    }
   }
 }
