--- a/scss/_blogDetails.scss
+++ b/scss/_blogDetails.scss
@@ -10,6 +10,15 @@
     line-height: 56.411px; /* 130% */
     margin-bottom: 12px;
   }
+  h2 {
+    color: #171924;
+    font-family: Proxima Nova;
+    font-size: 43.393px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 56.411px; /* 130% */
+    margin-bottom: 12px;
+  }
   h4 {
     color: #171924;
     font-family: Proxima Nova;
@@ -28,6 +37,131 @@
     font-weight: 400;
     line-height: 26.904px; /* 140.909% */
     margin-bottom: 20px;
+  }
+  blockquote {
+    margin-bottom: 1rem;
+    font-size: 1.25rem;
+  }
+  blockquote > :last-child {
+    margin-bottom: 0;
+  }
+
+  figcaption {
+    margin-top: -1rem;
+    margin-bottom: 1rem;
+    font-size: 0.875em;
+    color: #6c757d;
+  }
+  figcaption::before {
+    content: '— ';
+  }
+  ul {
+    li {
+      color: #171924;
+      font-family: Proxima Nova;
+      font-size: 19.093px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 26.036px; /* 136.364% */
+      position: relative;
+      padding-left: 25px;
+      margin-bottom: 10px;
+      &::after {
+        position: absolute;
+        content: '';
+        left: 0;
+        top: 50%;
+        transform: translateY(-50%);
+        background-image: url(../img/code.svg);
+        background-size: 100%;
+        background-repeat: no-repeat;
+        background-position: center;
+        width: 12px;
+        height: 12px;
+      }
+    }
+  }
+  ol {
+    color: #171924;
+    font-family: Proxima Nova;
+    font-size: 19.093px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26.036px; /* 136.364% */
+    position: relative;
+    padding-left: 25px;
+    margin-bottom: 10px;
+    &::after {
+      position: absolute;
+      content: '';
+      left: 0;
+      top: 50%;
+      transform: translateY(-50%);
+      background-image: url(../img/code.svg);
+      background-size: 100%;
+      background-repeat: no-repeat;
+      background-position: center;
+      width: 12px;
+      height: 12px;
+    }
+  }
+  a {
+    text-decoration: underline;
+    text-decoration-color: aqua;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+  table {
+    --bs-table-color-type: initial;
+    --bs-table-bg-type: initial;
+    --bs-table-color-state: initial;
+    --bs-table-bg-state: initial;
+    --bs-table-color: var(--bs-emphasis-color);
+    --bs-table-bg: var(--bs-body-bg);
+    --bs-table-border-color: var(--bs-border-color);
+    --bs-table-accent-bg: transparent;
+    --bs-table-striped-color: var(--bs-emphasis-color);
+    --bs-table-striped-bg: rgba(var(--bs-emphasis-color-rgb), 0.05);
+    --bs-table-active-color: var(--bs-emphasis-color);
+    --bs-table-active-bg: rgba(var(--bs-emphasis-color-rgb), 0.1);
+    --bs-table-hover-color: var(--bs-emphasis-color);
+    --bs-table-hover-bg: rgba(var(--bs-emphasis-color-rgb), 0.075);
+    width: 100%;
+    margin-bottom: 1rem;
+    vertical-align: top;
+    border-color: var(--bs-table-border-color);
+  }
+  table > :not(caption) > * > * {
+    padding: 0.5rem 0.5rem;
+    color: var(
+      --bs-table-color-state,
+      var(--bs-table-color-type, var(--bs-table-color))
+    );
+    background-color: var(--bs-table-bg);
+    border-bottom-width: var(--bs-border-width);
+    box-shadow: inset 0 0 0 9999px
+      var(
+        --bs-table-bg-state,
+        var(--bs-table-bg-type, var(--bs-table-accent-bg))
+      );
+  }
+  table > tbody {
+    vertical-align: inherit;
+  }
+  table > thead {
+    vertical-align: bottom;
+  }
+
+  table > :not(caption) > * > * {
+    padding: 0.25rem 0.25rem;
+  }
+
+  table > :not(caption) > * {
+    border-width: var(--bs-border-width) 0;
+  }
+  table > :not(caption) > * > * {
+    border-width: 0 var(--bs-border-width);
   }
 
   .BlogDetails {
