--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -241,6 +241,9 @@
   .blog .BlogDetails .blogTop ul li span {
     font-size: 12px;
   }
+  .OurValues .d-flex .item::after {
+    display: none;
+  }
 }
 
 /*// Small devices (landscape phones, 576px and up)*/
@@ -374,7 +377,7 @@
     margin-top: -20px;
   }
   header .navbar-brand img {
-    width: 210px;
+    width: 190px;
   }
   .CompanyOverview .box p {
     font-size: 14px;
@@ -566,10 +569,36 @@
   .fixedCall {
     right: 10px;
     bottom: 10px;
-    width: 30px;
+    width: 50px;
   }
   .fixedCall ul li {
     margin-bottom: 8px;
+  }
+  header {
+    padding: 10px 0px 10px 0;
+  }
+  .Spectrum .sliderWrapp .sliderBody .item {
+    margin: 0 10px;
+    padding: 30px 15px 20px 15px;
+    min-height: 230px;
+  }
+  .Modal2 .modal-dialog .modal-content {
+    padding-top: 40px;
+    padding-bottom: 40px;
+    padding-right: 25px;
+    padding-left: 25px;
+  }
+  .Modal2 .modal-dialog .modal-body .itemRight button {
+    width: 240px;
+    gap: 6px;
+    font-size: 16px;
+    line-height: 40px;
+    padding: 6px 15px;
+  }
+  .Modal2 .modal-dialog .modal-body .itemRight h2,
+  .Modal2 .modal-dialog .modal-body .itemRight .h2 {
+    font-size: 26px;
+    line-height: 34px;
   }
 }
 
