--- a/scss/_blogDetails.scss
+++ b/scss/_blogDetails.scss
@@ -129,6 +129,7 @@
     --bs-table-hover-bg: rgba(var(--bs-emphasis-color-rgb), 0.075);
     width: 100%;
     margin-bottom: 1rem;
+    margin-top: 1rem;
     vertical-align: top;
     border-color: var(--bs-table-border-color);
   }
